[fix] dark mode

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -10,7 +10,7 @@ $color-secondary: #F7A046;
 //$color_background-base: #1b1f23;
 $color_background-base: #282828;
 $color-white: #FFF;
-$color-gray: lighten($color-base, 40%);
+$color-gray: #949494;
 $color-gray-border: lighten($color-base, 77%);
 $color-gray-bg: lighten($color-base, 79%);
 
